Fixed scrollbars and samples table location

--- a/public_html/styles/table_style.css
+++ b/public_html/styles/table_style.css
@@ -51,6 +51,19 @@ table tr:hover
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
 
+div::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #565650;
+}
+
+div::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #6b6b66;
+}
+
 .manouverAssessment
 {
   top: 50%;
